WIP - Updated design.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,84 +1,42 @@
 @font-face{font-family:raleway;src:url(fonts/Roboto/Roboto-Regular.ttf) format("truetype");font-size:12px;}
+
 /* tag based css */
 body{font-family:raleway;background-image:url('../images/body-background.jpg');position:relative;overflow-x:hidden;}
 body,html{height:100%;}
 a:hover{text-decoration:none;}
-blockquote { font-size: 16.5px; }
-figure img { display: block; margin: 0 auto;}
+blockquote{font-size:16.5px;}
+figure img{display:block;margin:0 auto;}
 
 /* class based css */
-.header{ height: 950px; }
-.contact-me img{height:50px;width:50px;}
-.back-to-top{margin:0;position:fixed;bottom:15px;right:5px;z-index:100;display:none;text-decoration:none;text-decoration:none;color:black;}
+.typewriter,.typewriter-1,.typewriter-2,.typewriter-3{color:#000;font-family:fantasy;font-size:55px;font-weight:bolder;overflow:hidden;border-right:.15em solid orange; /* The typwriter cursor */white-space:nowrap; /* Keeps the content on a single line */margin:0 auto; /* Gives that scrolling effect as the typing happens */letter-spacing:.15em; /* Adjust as needed */animation:typing 4s steps(60,end),blink-caret .2s infinite;}
+.typewriter-3{font-size:40px;}
+
+/* The typing effect */
+@keyframes typing{
+	from{width:0;}
+	to{width:100%;}
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret{
+	from,to{border-color:transparent;}
+	100%{border-color:black;}
+}
+.blog-content{height:830px;}
+.header{height:970px;}
+.navbar a{letter-spacing:2px;}
+.back-to-top{margin:0;position:fixed;bottom:15px;right:10px;z-index:100;display:none;text-decoration:none;text-decoration:none;color:black;background-color: white;border-color: black;}
+.back-to-top:hover{background-color: white;border-color: black;}
 .copyright{margin-top:10px;}
 .header h2{position:relative;letter-spacing:4px;}
-.links-div{padding-top:25px;text-align:right;}
-.links-div a{font-size:19px;letter-spacing:2px;padding-left:22px;float:none;}
-.tag-class{font-weight:bold;letter-spacing:1px;font-size:15px;position:relative;top:33px;color:black;right:0px;}
-.social-class{font-weight:bold;letter-spacing:1px;font-size:15px;position:relative;top:15px;color:black;}
 .skills-text{padding-top:37px;}
 .contact-me-text{padding-top:37px;}
-.rewards-div{padding-top:0px;height:500px;}
-.contact-me{min-height:450px;}
+.rewards{padding-top:0px;height:970px;}
+.contact-me{min-height:920px;}
 .skill-heading,.contact-me-heading,.project-heading,.about-me-heading,.rewards-heading{background:gainsboro;height:100px;}
-.home{padding:75px 0 30px 0;}
-.about-me{padding:3px 0 30px 0;}
-.skills{padding-top:23px;padding-bottom:20px;}
-.about-me-heading h2{position:relative;top:31px;}
-.skill-heading h2,.rewards-heading h2{position:relative;top:31px;}
-.contact-me-heading h2{position:relative;top:31px;}
-.me{border-radius:95px;position:relative;right:8px;}
-.figure-caption{text-align: center;}
-.about-me-text{margin-top:37px;}
-.footer{padding-top:20px;}
+.about-me{padding:3px 0 30px 0;height:950px;}
+.skill-heading h2,.about-me-heading h2,.contact-me-heading h2,.rewards-heading h2{position:relative;top:31px;}
 .nav .open > a,.nav .open > a:hover,.nav .open > a:focus{background-color:transparent;}
 .talk-images{height:200px;width:300px;}
-.caption{position:relative;top:26px;text-decoration:none;color:black;left:28px;}
-#wrapper{padding-left:0;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease;}
-#wrapper.toggled{padding-left:220px;}
-#sidebar-wrapper{z-index:1000;left:220px;width:0;height:100%;margin-left:-220px;overflow-y:auto;overflow-x:hidden;background:#1a1a1a;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease;}
-#sidebar-wrapper::-webkit-scrollbar{display:none;}
-#wrapper.toggled #sidebar-wrapper{width:220px;}
-#page-content-wrapper{width:100%;padding-top:24px;}
-#wrapper.toggled #page-content-wrapper{position:absolute;margin-right:-220px;}
-.sidebar-nav{position:absolute;top:0;width:220px;margin:0;padding:0;list-style:none;}
-.sidebar-nav li{position:relative;line-height:20px;display:inline-block;width:100%;padding-bottom:20px;}
-.sidebar-nav li:before{content:'';position:absolute;top:0;left:0;z-index:-1;height:100%;width:3px;background-color:#1c1c1c;-webkit-transition:width .2s ease-in;-moz-transition:width .2s ease-in;-ms-transition:width .2s ease-in;transition:width .2s ease-in;}
-.sidebar-nav li:first-child a{color:#fff;background-color:#1a1a1a;}
-.sidebar-nav li:nth-child(2):before{background-color:#ec1b5a;}
-.sidebar-nav li:nth-child(3):before{background-color:#79aefe;}
-.sidebar-nav li:nth-child(4):before{background-color:#314190;}
-.sidebar-nav li:nth-child(5):before{background-color:#279636;}
-.sidebar-nav li:nth-child(6):before{background-color:#7d5d81;}
-.sidebar-nav li:nth-child(7):before{background-color:#ead24c;}
-.sidebar-nav li:nth-child(8):before{background-color:#2d2366;}
-.sidebar-nav li:nth-child(9):before{background-color:#35acdf;}
-.sidebar-nav li:hover:before,.sidebar-nav li.open:hover:before{width:100%;-webkit-transition:width .2s ease-in;-moz-transition:width .2s ease-in;-ms-transition:width .2s ease-in;transition:width .2s ease-in;}
-.sidebar-nav li a{display:block;color:#ddd;text-decoration:none;padding:31px 15px 10px 30px;}
-li.sidebar-brand a{padding-top:11px;}
-.sidebar-nav li span{vertical-align:middle;}
-.sidebar-nav li a:hover,.sidebar-nav li a:active,.sidebar-nav li a:focus,.sidebar-nav li.open a:hover,.sidebar-nav li.open a:active,.sidebar-nav li.open a:focus{color:#fff;text-decoration:none;background-color:transparent;}
-.sidebar-nav > .sidebar-brand{height:65px;font-size:20px;line-height:44px;}
-.sidebar-nav .dropdown-menu{position:relative;width:100%;padding:0;margin:0;border-radius:0;border:none;background-color:#222;box-shadow:none;}
-.hamburger{position:fixed;top:20px;z-index:999;display:block;width:32px;height:32px;margin-left:15px;background:transparent;border:none;}
-.hamburger:hover,.hamburger:focus,.hamburger:active{outline:none;}
-.hamburger.is-closed:before{content:'';display:block;width:100px;font-size:14px;color:#fff;line-height:32px;text-align:center;opacity:0;-webkit-transform:translate3d(0,0,0);-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-closed:hover:before{opacity:1;display:block;-webkit-transform:translate3d(-100px,0,0);-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-closed .hamb-top,.hamburger.is-closed .hamb-middle,.hamburger.is-closed .hamb-bottom,.hamburger.is-open .hamb-top,.hamburger.is-open .hamb-middle,.hamburger.is-open .hamb-bottom{position:absolute;left:0;height:4px;width:100%;}
-.hamburger.is-closed .hamb-top,.hamburger.is-closed .hamb-middle,.hamburger.is-closed .hamb-bottom{background-color:#1a1a1a;}
-.hamburger.is-closed .hamb-top{top:5px;-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-closed .hamb-middle{top:50%;margin-top:-2px;}
-.hamburger.is-closed .hamb-bottom{bottom:5px;-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-closed:hover .hamb-top{top:0;-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-closed:hover .hamb-bottom{bottom:0;-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-open .hamb-top,.hamburger.is-open .hamb-middle,.hamburger.is-open .hamb-bottom{background-color:#1a1a1a;}
-.hamburger.is-open .hamb-top,.hamburger.is-open .hamb-bottom{top:50%;margin-top:-2px;}
-.hamburger.is-open .hamb-top{-webkit-transform:rotate(45deg);-webkit-transition:-webkit-transform .2s cubic-bezier(.73,1,.28,.08);}
-.hamburger.is-open .hamb-middle{display:none;}
-.hamburger.is-open .hamb-bottom{-webkit-transform:rotate(-45deg);-webkit-transition:-webkit-transform .2s cubic-bezier(.73,1,.28,.08);}
-.hamburger.is-open:before{content:'';display:block;width:100px;font-size:14px;color:#fff;line-height:32px;text-align:center;opacity:0;-webkit-transform:translate3d(0,0,0);-webkit-transition:all .35s ease-in-out;}
-.hamburger.is-open:hover:before{opacity:1;display:block;-webkit-transform:translate3d(-100px,0,0);-webkit-transition:all .35s ease-in-out;}
-.overlay{position:fixed;display:none;width:100%;height:100%;top:0;left:0;right:0;bottom:0;background-color:rgba(250,250,250,.8);z-index:1;}
-.tooltip{height:80px;width:200px;box-shadow:2px 2px 6px 2px rgba(0,0,0,.15)}
-.blog-link a { font-size: 20px; text-decoration: none}
-.blog-link {padding: 16px 0px 0px 40px;}
+.blog-link a{font-size:20px;text-decoration:none}
+.blog-link{padding:16px 0px 0px 40px;}
