WIP - making page responsive

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,8 +22,45 @@ figure img{display:block;margin:0 auto;}
 	from,to{border-color:transparent;}
 	100%{border-color:black;}
 }
+
+@media (max-width: 768px) {
+
+}
+
+@media (max-width: 980px) {
+	.intro h2 {
+		font-size: 35px;
+	}
+	.about-me{height:950px;}
+
+}
+
+@media (max-width: 1080px) {
+	.intro h2 {
+		font-size: 40px;
+	}
+	.about-me{height:950px;}
+
+}
+
+@media (min-width: 1360px) {
+	.header{height:880px;}
+	.about-me{height:1000px;}
+	.rewards{height:880px;}
+	.contact-me{height:820px;}
+
+}
+
+@media (min-width: 1680px) {
+	.header{height:970px;}
+	.about-me{height:1100px;}
+	.rewards{height:970px;}
+	.contact-me{height:920px;}
+
+
+}
+
 .blog-content{height:830px;}
-.header{height:970px;}
 .navbar a{letter-spacing:2px;}
 .back-to-top{margin:0;position:fixed;bottom:15px;right:10px;z-index:100;display:none;text-decoration:none;text-decoration:none;color:black;background-color: white;border-color: black;}
 .back-to-top:hover{background-color: white;border-color: black;}
@@ -31,10 +68,7 @@ figure img{display:block;margin:0 auto;}
 .header h2{position:relative;letter-spacing:4px;}
 .skills-text{padding-top:37px;}
 .contact-me-text{padding-top:37px;}
-.rewards{padding-top:0px;height:970px;}
-.contact-me{min-height:920px;}
 .skill-heading,.contact-me-heading,.project-heading,.about-me-heading,.rewards-heading{background:gainsboro;height:100px;}
-.about-me{height:1100px;}
 .skill-heading h2,.about-me-heading h2,.contact-me-heading h2,.rewards-heading h2{position:relative;top:31px;}
 .nav .open > a,.nav .open > a:hover,.nav .open > a:focus{background-color:transparent;}
 .talk-images{height:200px;width:300px;}
