--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,4 +93,6 @@ figure img { display: block; margin: 0 auto; }
 	.about-me { height: 1100px; }
 	.rewards { height: 970px; }
 	.contact-me { height: 920px; }
+	.intro h2 { font-size: 60px; }
+	.intro h4 { font-size: 35px; }
 }
