--- a/analysis/github-repos/static/css/style.css
+++ b/analysis/github-repos/static/css/style.css
@@ -2,6 +2,5 @@
 body{overflow-x:hidden;}
 
 /* class based styles */
-.page-header{margin-top:5px;padding-bottom:0px;}
 .d3-tip{line-height:1;font-weight:bold;padding:12px;background:rgba(0,0,0,0.8);color:#fff;border-radius:2px;}
-div.overlay { position: absolute; z-index: 3; opacity: 0.5; filter: alpha(opacity=50); top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%; background-color: Black; color: White; }
+div.repovis { height: 820px; }
