--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="shortcut icon" href="static/images/favicon.png" />
+    <link rel="shortcut icon" href="/static/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/css/style.css" />
     <title> {{ page.title }} </title>
     {% seo %}
 </head>
+
 <body>
+    <div id="twitter-wjs"></div>
     <div id="wrapper">
         {{ content }}
     </div>
+    <a class="btn btn-primary back-to-top">
+        <img src="/static/images/uparrow.jpg" />
+    </a>
     <div class="container footer">
         <footer class="text-center"></footer>
     </div>
