Update the webpage design
Signed-off-by: mukultaneja <mukultaneja91@gmail.com>

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,9 @@
 body{font-family:raleway;background-image:url('../images/body-background.jpg');position:relative;overflow-x:hidden;}
 body,html{height:100%;}
 a:hover{text-decoration:none;}
-blockquote{font-size:16.5px;}
-figure img{display:block;margin:0 auto;}
-
+blockquote{font-size:18px;}
+figure img{margin-top:80px}
+ul {list-style-type: none;}
 /* class based css */
 .typewriter,.typewriter-1,.typewriter-2,.typewriter-3{color:#000;font-family:fantasy;font-size:55px;font-weight:bolder;overflow:hidden;border-right:.15em solid orange; /* The typwriter cursor */white-space:nowrap; /* Keeps the content on a single line */margin:0 auto; /* Gives that scrolling effect as the typing happens */letter-spacing:.15em; /* Adjust as needed */animation:typing 4s steps(60,end),blink-caret .2s infinite;}
 .typewriter-3{font-size:40px;}
