Updated: Blog Page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,13 @@
     <div id="twitter-wjs"></div>
     <div id="wrapper">
         {{ content }}
+        <div class="footer">
+            <footer class="text-center"></footer>
+        </div>
     </div>
     <a class="btn btn-primary back-to-top">
         <img src="/static/images/uparrow.jpg" />
     </a>
-    <div class="container footer">
-        <footer class="text-center"></footer>
-    </div>
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
