--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,41 +29,28 @@ layout: default
     }(document, "script", "twitter-wjs"));
 </script>
 
-<div class="container-fluid">
-    <div class="row mt-2 p-2">
-        <div class="col-3">
-            <nav class="navbar navbar-expand-lg">
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav w-100">
-                        <li class="nav-item w-25 text-center">
-                            <a href="/blogs">
-                                <span class="font-weight-bold">Blogs</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <div class="col-9">
-            <h2>{{ page.title }}</h2>
+<div class="container">
+    <div class="row mt-2">
+        <div class="col-12">
+            <h2 class="text-center">{{ page.title }}</h2>
         </div>
     </div>
 </div>
-<hr />
+<br /><br />
 <div class="container">
-    <div class="row p-3">
-        <div class="col-7">
+    <div class="row">
+        <div class="col-7 pt-2">
             <p class="meta">{{ page.date | date_to_string }}</p>
         </div>
-        <div class="col-2">
+        <!--div class="col-2 pt-2">
             {{ page.fb }}
         </div>
-        <div class="col-2">
+        <div class="col-2 pt-2">
             {{ page.linkedin }}
         </div>
-        <div class="col-1">
+        <div class="col-1 pt-2">
             {{ page.twitter }}
-        </div>
+        </div-->
     </div>
 </div>
 <div class="container"><hr /></div>
