Restrucing the index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item w-20 pl-5 text-center">
-                                    <a href="resume/resume.pdf" class="resume" target="_blank">
+                                    <a href="/resume/resume.pdf" class="resume" target="_blank">
                                         <span class="font-weight-bold">Resume</span>
                                     </a>
                                 </li>
