--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,14 @@ ul {list-style-type: none;}
 .typewriter,.typewriter-1,.typewriter-2,.typewriter-3{color:#000;font-family:fantasy;font-size:55px;font-weight:bolder;overflow:hidden;border-right:.15em solid orange; /* The typwriter cursor */white-space:nowrap; /* Keeps the content on a single line */margin:0 auto; /* Gives that scrolling effect as the typing happens */letter-spacing:.15em; /* Adjust as needed */animation:typing 4s steps(60,end),blink-caret .2s infinite;}
 .typewriter-3{font-size:40px;}
 
+p.name {
+	font-weight: bold;
+	font-size: 24px
+}
+div.intro {
+	height: 500px
+}
+
 /* The typing effect */
 @keyframes typing{
 	from{width:0;}
