--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,9 @@
             </div>
             <hr />
         </div>
-        {{ content }}
+        <div class="content">
+            {{ content }}
+        </div>
     </div>
     <div class="footer">
         <footer class="text-center"></footer>
