--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,9 +57,9 @@
             {{ content }}
         </div>
     </div>
-    <div class="footer">
+    <!--div class="footer">
         <footer class="text-center"></footer>
-    </div>
+    </div-->
     <!--a class="btn btn-primary back-to-top">
         <img src="/static/images/uparrow.jpg" />
     </a-->
